--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -3,7 +3,7 @@ h1 {
     font-size: 100px;
     font-weight: bold;
     color: khaki
-    text-algn: center;   
+    text-align: center;    
 }
 .Brushes {
     font-family: Helvetica, sans-serif;
@@ -17,10 +17,11 @@ h1 {
     font-family: Helvetica, sans-serif;
     font-size: 32px;
     font-weight: bold;
-    color: white
-    background-color: lightcoral;
+    color: white;
+
+    <!--   background-color: lightcoral;  --!>
 }
-}
+
 
 .Paint {
     font-family: Helvetica, sans-serif;
@@ -29,4 +30,8 @@ h1 {
     color: white
     background-color: skyblue;
 }
+
+span {
+    color: blue
+    font-style: italic;
 }
